--- a/src/Componet/main/main.css
+++ b/src/Componet/main/main.css
@@ -49,7 +49,7 @@ main {
 }
 
 .navigation {
-  width: 60%;
+  width: 50%;
   height: 35px;
   max-width: 600px;
   display: flex;
@@ -93,6 +93,10 @@ main {
   color: white;
   font-size: 14px;
   border-radius: 6px;
+}
+.navigation .btn_red{
+  background-color: red;
+  color: white;
 }
 .navigation .FaPlane,
 .navigation .MdHotel,
